# Navigation_Ros

./: SLAM_RESULTS.md
HW00/: README.md
HW00/nuturtle_description/: CMakeLists.txt
HW00/nuturtle_description/config/: nuturtle.rviz
HW00/nuturtle_description/urdf/: diff_drive.urdf.xacro
HW00/rigid2d/: C002_answers.md  main.cpp  rigid2d.cpp  rigid2d.hpp  rigid2d_test  test1_answer.txt  test1_input.txt  test_compile.bash
HW00/tsim/: CMakeLists.txt  README.md  package.xml
HW00/tsim/config/: trect.yaml
HW00/tsim/src/: turtle_rect.cpp
HW01/nuturtle_description/config/: diff_params.yaml
HW01/rigid2d/: CMakeLists.txt  package.xml
HW01/rigid2d/include/rigid2d/: diff_drive.hpp  rigid2d.hpp  waypoints.hpp
HW01/rigid2d/src/: diff_drive.cpp  fake_diff_encoders.cpp  odometer.cpp  rigid2d.cpp  rigid2d_node.cpp  waypoints.cpp
HW01/tsim/: CMakeLists.txt  README.md  package.xml
HW01/tsim/launch/: turtle_odom.launch
HW02/: Homework2_Answers.md  README.md
HW02/mygitrepository/nuturtle_description/: CMakeLists.txt  package.xml
HW02/mygitrepository/nuturtle_description/config/: diff_params.yaml  rotation.rviz
HW02/mygitrepository/nuturtle_description/urdf/: diff_drive.urdf.xacro
HW02/mygitrepository/rigid2d/: CMakeLists.txt  README.md
HW02/mygitrepository/rigid2d/include/rigid2d/: diff_drive.hpp  rigid2d.hpp  waypoints.hpp
HW02/mygitrepository/rigid2d/src/: rigid2d_node.cpp  waypoints.cpp
HW02/nuturtle_robot/launch/: basic_remote.launch  follow_waypoints.launch  test_movement.launch
HW02/nuturtle_robot/src/: real_waypoint.cpp
HW03/: README.md  SLAM_RESULTS.md
HW03/ekf/: CMakeLists.txt
HW03/ekf/include/ekf/: ekf.hpp
HW03/ekf/src/: ekf.cpp
HW03/geometryfitting/: CMakeLists.txt
HW03/geometryfitting/include/geometryfitting/: geometryfitting.hpp
HW03/mygitrepository/: README.md  nuturtle.rosinstall
HW03/mygitrepository/nuturtle_description/: CMakeLists.txt
HW03/mygitrepository/nuturtle_description/config/: diff_params.yaml
HW03/mygitrepository/nuturtle_description/urdf/: diff_drive.gazebo.xacro
HW03/mygitrepository/rigid2d/src/: diff_drive.cpp  odometer.cpp  rigid2d.cpp  waypoints.cpp
HW03/mygitrepository/tsim/: README.md
HW03/mygitrepository/tsim/launch/: turtle_pent.launch
HW03/nuslam/: CMakeLists.txt  package.xml
HW03/nuslam/launch/: landmarks.launch
HW03/nuslam/msg/: TurtleMap.msg
HW03/nuslam/src/: landmarks.cpp  slam.cpp
HW03/nuturtle_robot/: CMakeLists.txt
HW03/nuturtle_robot/src/: translation.cpp  turtle_interface.cpp
HW03/nuturtle_robot/srv/: start.srv
ekf/: README.md  package.xml
geometryfitting/: README.md  package.xml
geometryfitting/src/: geometryfitting.cpp
mygitrepository/nuturtle_description/: README.md
mygitrepository/nuturtle_description/config/: feedback.rviz  landmarks.rviz  turtle_odom_pent.rviz
mygitrepository/nuturtle_description/launch/: view_diff_drive.launch
mygitrepository/nuturtle_description/urdf/: diff_drive.urdf.xacro
mygitrepository/nuturtle_gazebo/: CMakeLists.txt  package.xml
mygitrepository/nuturtle_gazebo/launch/: diff_drive_gazebo.launch  gazebo_waypoints.launch
mygitrepository/nuturtle_gazebo/src/: turtle_drive_plugin.cpp
mygitrepository/rigid2d/: CMakeLists.txt  package.xml
mygitrepository/rigid2d/include/rigid2d/: waypoints.hpp
mygitrepository/rigid2d/src/: fake_diff_encoders.cpp
mygitrepository/rigid2d/test/: utest.cpp  utest.test
mygitrepository/tsim/: CMakeLists.txt
mygitrepository/tsim/launch/: trect.launch
mygitrepository/tsim/msg/: PoseError.msg
mygitrepository/tsim/src/: turtle_rect.cpp  turtle_way.cpp
nuslam/: README.md
nuslam/launch/: slam.launch
nuslam/msg/: MapIndexVisual.msg
nuslam/src/: analysis.cpp  draw_map.cpp
nuturtle_robot/: package.xml
nuturtle_robot/launch/: basic_remote.launch
nuturtle_robot/src/: real_waypoint.cpp  rotation.cpp
nuturtle_robot/test/: turtle_interface_test.cpp  turtle_interface_test.test
