<?xml version="0.0.1"?>
<package format="2">
  <name>tsim</name>
  <version>0.0.0</version>
  <description>tsim pkg for Task B</description>

  <maintainer email="yixiaowang2020@u.northwestern.edu">Yixiao Wang</maintainer>

  <license>BSD</license>

  <author email="yixiaowang2020@u.northwestern.edu">Yixiao Wang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>turtlesim</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
