<?xml version="0.0.1"?>
<package format="2">
  <name>nuturtle_description</name>
  <version>0.0.0</version>
  <description>pkg for ME495</description>

  <maintainer email="yixiaowang2020@u.northwestern.edu">Yixiao Wang</maintainer>

  <license>BSD</license>

  <author email="yixiaowang2020@u.northwestern.edu">Yixiao Wang</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
